downgrade to java 8 to make it compatible with android-app