@@ -28,7 +28,7 @@ public class FileUtils {
             try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
                 String line;
                 while ((line = reader.readLine()) != null) {
-                    if (!line.isBlank()) {
+                    if (!line.trim().isEmpty()) {
                         String[] row = line.split(separator);
                         list.add(row);
                     }
